code the SOTA CNN model for ECG classification

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "665d8379",
    "metadata": {},
    "outputs": [],
@@ -157,6 +157,46 @@
     "label_A00001 = labels_df[labels_df['filename'] == 'A00001']['label'].values[0]\n",
     "print(f\"\\nLe label pour A00001 est : {label_A00001}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "38826610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Lout(Lin, K, P, S) : \n",
+    "    return np.abs((Lin+2*P-K)/S + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c25eeb1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(987.0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Lout(1000,16,1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bf74acc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
