--- a/main.ipynb
+++ b/main.ipynb
@@ -279,16 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c3b3d6f4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "2026-01-05 12:04:15.431272: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2026-01-05 12:04:15.496265: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2026-01-05 12:04:17.265861: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "/opt/python/lib/python3.13/site-packages/keras/src/export/tf2onnx_lib.py:8: FutureWarning: In the future `np.object` will be defined as the corresponding NumPy scalar.\n",
+      "  if not hasattr(np, \"object\"):\n"
      ]
     }
    ],
@@ -305,8 +309,7 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from torchsummary import summary\n",
     "\n",
-    "import load \n",
-    "from load_data import ECGDataset, ECGCollate, SmartBatchSampler\n",
+    "from load_data import ECGDataset, ECGCollate, SmartBatchSampler, load_dataset, load_ecg\n",
     "from resnet1d import ResNet1D\n",
     "\n",
     "%load_ext autoreload\n",
@@ -332,7 +335,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7676/7676 [00:01<00:00, 4503.84it/s]"
+      "100%|██████████| 7676/7676 [00:01<00:00, 4808.55it/s]"
      ]
     },
     {
@@ -373,7 +376,7 @@
    ],
    "source": [
     "print(\"Loading training set...\")\n",
-    "train = load.load_dataset(\"train.json\")\n",
+    "train = load_dataset(\"train.json\",256)\n",
     "ecgs, labels = train\n",
     "print(f\"len(X) : \\n {len(ecgs)}\")\n",
     "print(f\"len(y) : \\n {len(labels)}\")\n",
@@ -386,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e5a71082",
    "metadata": {},
    "outputs": [
@@ -401,18 +404,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 852/852 [00:00<00:00, 4661.71it/s]\n"
+      "100%|██████████| 852/852 [00:00<00:00, 4962.65it/s]\n"
      ]
     }
    ],
    "source": [
     "print(\"Loading dev set...\")\n",
-    "val = load.load_dataset(\"dev.json\")"
+    "val = load_dataset(\"dev.json\",256)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f8b41d01",
    "metadata": {},
    "outputs": [
@@ -436,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e4996a33",
    "metadata": {},
    "outputs": [
@@ -520,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0ea4761f",
    "metadata": {},
    "outputs": [],
@@ -536,8 +539,6 @@
     "    loss_cutoff = len(train_loader) // 10\n",
     "    optimizer = torch.optim.Adam(model.parameters(), 0.001)\n",
     "\n",
-    "    # The scheduler is used to change the learning rate every few \"n\" steps.\n",
-    "    #scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=int(epochs * len(train_loader) / 5), gamma=hparams.get('gamma', 0.8))\n",
     "    scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer,\n",
     "                                                            mode='min', \n",
     "                                                            factor=0.1, # like in Hannun et al.\n",
@@ -590,7 +591,6 @@
     "                ecgs, labels = batch\n",
     "                ecgs, labels = ecgs.to(device), labels.to(device)\n",
     "\n",
-    "                #ecgs = ecgs.view(images.shape[0], -1)\n",
     "                pred = model(ecgs)\n",
     "                loss = loss_func(pred, labels)\n",
     "                validation_loss.append(loss.item())\n",
@@ -599,6 +599,7 @@
     "\n",
     "                # Update the tensorboard logger.\n",
     "                tb_logger.add_scalar(f'classifier_{name}/val_loss', loss.item(), epoch * len(val_loader) + val_iteration)\n",
+    "        \n",
     "        scheduler.step(np.mean(validation_loss))\n"
    ]
   },
@@ -925,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "85de6657",
    "metadata": {},
    "outputs": [
@@ -968,7 +969,7 @@
     "import scipy.stats as sst\n",
     "from sklearn.metrics import classification_report, precision_recall_fscore_support\n",
     "\n",
-    "def evaluate_model_full(model, dataloader, device, prior=None):\n",
+    "def evaluate_model_full(model, dataloader, device):\n",
     "    \"\"\"\n",
     "    Évalue le modèle en faisant un vote majoritaire sur les séquences temporelles.\n",
     "    Gère le padding (-100) pour ne pas fausser le vote.\n",
@@ -1016,12 +1017,7 @@
     "                    \n",
     "                    # --- Logique de vote majoritaire (Ton algorithme original) ---\n",
     "                    \n",
-    "                    # Ajustement par le Prior (si fourni)\n",
-    "                    if prior is not None:\n",
-    "                        # valid_p / prior[:, None] broadcast le vecteur prior sur l'axe temps\n",
-    "                        predictions_seq = np.argmax(valid_p / prior[:, None], axis=0)\n",
-    "                    else:\n",
-    "                        predictions_seq = np.argmax(valid_p, axis=0)\n",
+    "                    predictions_seq = np.argmax(valid_p, axis=0)\n",
     "\n",
     "                    # Vote Majoritaire (Mode) sur la séquence temporelle\n",
     "                    # On prend la classe la plus fréquente dans la séquence prédite\n",
@@ -1070,7 +1066,6 @@
     "    print(\"=\"*60)\n",
     "\n",
     "# --- Exemple d'utilisation ---\n",
-    "# prior = np.array([0.1, 0.6, 0.2, 0.1]) # Si tu en as un\n",
     "evaluate_model_full(model, val_loader, device=device, prior=None)"
    ]
   }
