fix val_loss bug

--- a/lth_ecg_copy.ipynb
+++ b/lth_ecg_copy.ipynb
@@ -132,8 +132,7 @@
     "        model.eval()\n",
     "        val_loop = create_tqdm_bar(val_loader, desc=f'Validation Epoch [{epoch + 1}/{epochs}]')\n",
     "        f1_metric.reset() # Reset pour calculer uniquement la val\n",
-    "        all_preds = []\n",
-    "        all_labels = []\n",
+    "        \n",
     "        with torch.no_grad():\n",
     "            for val_iteration, batch in val_loop:\n",
     "                ecgs, labels = batch\n",
@@ -141,6 +140,9 @@
     "\n",
     "                pred = model(ecgs) # Sortie probable: (Batch, Classes, Time)\n",
     "                \n",
+    "                loss = loss_func(pred, labels)\n",
+    "                validation_loss.append(loss.item())\n",
+    "\n",
     "                probs = F.softmax(pred, dim=1).transpose(1, 2)\n",
     "                adjusted_probs = probs / prior\n",
     "                \n",
@@ -155,8 +157,6 @@
     "                \n",
     "                # Mise à jour de la métrique (Tenseurs 1D d'entiers)\n",
     "                f1_metric.update(final_preds, final_labels)\n",
-    "\n",
-    "                validation_loss.append(loss.item())\n",
     "\n",
     "                # Calcul du CINC Average partiel pour la barre de progression\n",
     "                current_val_f1s = f1_metric.compute()\n",
@@ -173,16 +173,16 @@
     "        # Calcul final des métriques de l'époque\n",
     "        #epoch_f1_val = f1_metric.compute().item()\n",
     "        \n",
-    "        # # 3. Récupération des scores par classe (A, N, O, ~)\n",
-    "        # per_class_f1 = f1_metric.compute() \n",
+    "        # 3. Récupération des scores par classe (A, N, O, ~)\n",
+    "        per_class_f1 = f1_metric.compute() \n",
     "        \n",
-    "        # # 4. CINC Average : Moyenne des 3 premières classes (A, N, O)\n",
-    "        # # Comme demandé dans ton snippet : np.mean(scores[2][:3])\n",
-    "        # cinc_f1 = torch.mean(per_class_f1[:3]).item()\n",
+    "        # 4. CINC Average : Moyenne des 3 premières classes (A, N, O)\n",
+    "        # Comme demandé dans ton snippet : np.mean(scores[2][:3])\n",
+    "        cinc_f1 = torch.mean(per_class_f1[:3]).item()\n",
     "\n",
     "\n",
-    "        if current_val_cinc > best_f1_val:\n",
-    "            best_f1_val = current_val_cinc\n",
+    "        if cinc_f1 > best_f1_val:\n",
+    "            best_f1_val = cinc_f1\n",
     "\n",
     "        scheduler.step(np.mean(validation_loss))\n",
     "\n",
@@ -190,7 +190,7 @@
     "        # Si le F1 dépasse 82.6% (0.826), on considère que le ticket a convergé avec une tolérance de 1%\n",
     "        # par rapport au 83.6% de l'article\n",
     "        if cinc_f1 >= 0.826:\n",
-    "            print(f\"\\n[Early Stopping] F1 Val ({current_val_cinc:.4f}) >= 0.826. Fin de l'entraînement pour cette étape LTH.\")\n",
+    "            print(f\"\\n[Early Stopping] F1 Val ({cinc_f1:.4f}) >= 0.826. Fin de l'entraînement pour cette étape LTH.\")\n",
     "            break\n",
     "    \n",
     "    return model, best_f1_val\n"
