modify to plot the test score of the sparse model  instead of full model

--- a/lth_ecg_copy.ipynb
+++ b/lth_ecg_copy.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f893f2eb",
    "metadata": {},
    "outputs": [],
@@ -369,6 +369,8 @@
     "    \n",
     "    remaining_weights_number = initial_weights_number\n",
     "    \n",
+    "    f1_metric = MulticlassF1Score(num_classes=4, average=None).to(device)\n",
+    "\n",
     "    step = 0\n",
     "\n",
     "    # Listes pour l'historique\n",
@@ -411,18 +413,8 @@
     "\n",
     "        # 3. Archivage\n",
     "        history_theta.append(initial_weights_number/remaining_weights_number)\n",
-    "        history_f1.append(final_f1)\n",
+    "        \n",
     "        history_sparsity.append(current_mask.sparsity)\n",
-    "\n",
-    "        # Plots and push of checkpoints on github every 5 steps \n",
-    "        if step % 5 == 0:\n",
-    "            plot_lth_progress(history_theta, history_f1)\n",
-    "            plot_layerwise_remaining_params(model, current_mask)\n",
-    "            push_checkpoint_to_git(\n",
-    "                    filepaths=[checkpoint_file,\"plots/lth_performance_plot.png\",\"plots/layerwise_remaining_params_plot.png\"],\n",
-    "                    branch_name=\"felix-v3\",  # Mets le nom de ta branche ici\n",
-    "                    commit_msg=f\"Auto save checkpoints and plots step {step-1}\"\n",
-    "                )\n",
     "                \n",
     "        if isinstance(D, PrunedModel):\n",
     "            model_to_prune = D.model\n",
@@ -432,6 +424,58 @@
     "        # Prune p_init% of weights which are of least magnitude\n",
     "    \n",
     "        new_mask = prune(pruning_fraction, pruning_params[\"pruning_layers_to_ignore\"], model_to_prune, current_mask)\n",
+    "\n",
+    "        D_sparse = PrunedModel(model=model_to_prune,mask = new_mask).to(device)\n",
+    "\n",
+    "        # Validation\n",
+    "        D_sparse.eval()\n",
+    "        val_loop = create_tqdm_bar(val_loader, desc=f'Validation Sparse Model [step : {step}]')\n",
+    "        f1_metric.reset() # Reset pour calculer uniquement la val\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            for val_iteration, batch in val_loop:\n",
+    "                ecgs, labels = batch\n",
+    "                ecgs, labels = ecgs.to(device), labels.to(device)\n",
+    "\n",
+    "                pred = D_sparse(ecgs) # Sortie probable: (Batch, Classes, Time)\n",
+    "                \n",
+    "                loss = loss_func(pred, labels)\n",
+    "                validation_loss.append(loss.item())\n",
+    "\n",
+    "                probs = F.softmax(pred, dim=1).transpose(1, 2)\n",
+    "                adjusted_probs = probs / prior\n",
+    "                \n",
+    "                # 2. Argmax pour obtenir les indices de classes : (B, S)\n",
+    "                indices = torch.argmax(adjusted_probs, dim=2)\n",
+    "                \n",
+    "                # 3. Réduction temporelle par le MODE : (B,)\n",
+    "                final_preds, _ = torch.mode(indices, dim=1)\n",
+    "                \n",
+    "                # 4. Réduction des labels (Batch, Séquence) -> (Batch,)\n",
+    "                final_labels = labels[:, 0] if labels.dim() > 1 else labels\n",
+    "                \n",
+    "                # Mise à jour de la métrique (Tenseurs 1D d'entiers)\n",
+    "                f1_metric.update(final_preds, final_labels)\n",
+    "\n",
+    "                # Calcul du CINC Average partiel pour la barre de progression\n",
+    "                current_val_f1s = f1_metric.compute()\n",
+    "                current_val_cinc = torch.mean(current_val_f1s[:3]).item() # Moyenne A, N, O\n",
+    "                # Update the progress bar.\n",
+    "                val_loop.set_postfix(\n",
+    "                    val_loss = \"{:.8f}\".format(np.mean(validation_loss)),\n",
+    "                    f1_val=f\"{current_val_cinc:.4f}\")\n",
+    "        \n",
+    "        history_f1.append(current_val_cinc)\n",
+    "\n",
+    "        # Plots and push of checkpoints on github every 5 steps \n",
+    "        if step % 5 == 0:\n",
+    "            #plot_lth_progress(history_theta, history_f1)\n",
+    "            plot_layerwise_remaining_params(model, current_mask)\n",
+    "            push_checkpoint_to_git(\n",
+    "                    filepaths=[checkpoint_file,\"plots/lth_performance_plot.png\",\"plots/layerwise_remaining_params_plot.png\"],\n",
+    "                    branch_name=\"felix-v3\",  # Mets le nom de ta branche ici\n",
+    "                    commit_msg=f\"Auto save checkpoints and plots step {step-1}\"\n",
+    "                )\n",
     "\n",
     "        # Update pruning percentage (alpha = 1.1)\n",
     "        pruning_percentage = pruning_percentage**(1/1.1)\n",
