--- a/iterative_pruning.ipynb
+++ b/iterative_pruning.ipynb
@@ -374,25 +374,16 @@
     "        print(\"current pruning percentage = \", np.round(step*step_pruning_percentage,2), ' % ', ' over ', pruning_percentage, ' %')\n",
     "        print(\"pruning fraction = \", np.round(pruning_fraction,2))\n",
     "        print(\"model sparcity (percentage of weight that has been pruned): \", current_mask.sparsity )  \n",
+    "        \n",
     "        # Train the DL network with the given data x.\n",
     "        D,final_accuracy = train_model(D, train_loader, val_loader, loss_func, name = \"lth_ecg\", prior = prior, epochs=20,tb_logger=None)\n",
     "\n",
     "        # 3. Archivage\n",
     "        history_theta.append(initial_weights_number/remaining_weights_number)\n",
-    "        history_acc.append(final_accuracy)\n",
+    "        #history_acc.append(final_accuracy)\n",
     "        history_sparsity.append(current_mask.sparsity)\n",
     "\n",
-    "        # Plots and push of checkpoints on github every 5 steps \n",
-    "        if step % 5 == 0:\n",
-    "            plot_lth_progress(history_theta, history_f1)\n",
-    "            plot_layerwise_remaining_params(model, current_mask)\n",
-    "            push_checkpoint_to_git(\n",
-    "                    filepaths=[checkpoint_file,\n",
-    "                    f\"plots/iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}_performance_plot.png\",\n",
-    "                    f\"plots/layerwise_remaining_params_plot_weight_rewinding_{str(pruning_params['weight_rewinding'])}.png\"],\n",
-    "                    branch_name=\"felix-v3\",  # Mets le nom de ta branche ici\n",
-    "                    commit_msg=f\"Auto save checkpoints and plots step {step-1}\"\n",
-    "                )\n",
+    "        \n",
     "                \n",
     "        if isinstance(D, PrunedModel):\n",
     "            model_to_prune = D.model\n",
@@ -402,6 +393,43 @@
     "        # Prune p_init% of weights which are of least magnitude\n",
     "    \n",
     "        new_mask = prune(pruning_fraction, pruning_params[\"pruning_layers_to_ignore\"], model_to_prune, current_mask)\n",
+    "\n",
+    "        D_sparse = PrunedModel(model_to_prune, mask = new_mask)\n",
+    "\n",
+    "        D_sparse.eval()\n",
+    "        val_loop = create_tqdm_bar(val_loader, desc=f'Validation Sparse Model [step : {step}]')\n",
+    "        accuracy_metric.reset() # Reset pour calculer uniquement la val\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            for val_iteration, batch in val_loop:\n",
+    "                ecgs, labels = batch\n",
+    "                ecgs, labels = ecgs.to(device), labels.to(device)\n",
+    "\n",
+    "                logits = model(ecgs) # Sortie probable: (Batch, Classes, Time)\n",
+    "\n",
+    "                # Update validation metrics\n",
+    "                preds = torch.argmax(logits, dim=1)  # (B, S)\n",
+    "                accuracy_metric.update(preds, targets)\n",
+    "                current_val_accuracy = accuracy_metric.compute.item()\n",
+    "                # Update the progress bar.\n",
+    "                val_loop.set_postfix(\n",
+    "                    val_acc=f\"{current_val_accuracy:.4f}\")\n",
+    "\n",
+    "\n",
+    "        history_acc.append(current_val_accuracy)\n",
+    "\n",
+    "\n",
+    "        # Plots and push of checkpoints on github every 5 steps \n",
+    "        if step % 5 == 0:\n",
+    "            plot_lth_progress(history_theta, history_acc)\n",
+    "            plot_layerwise_remaining_params(D_sparse, current_mask)\n",
+    "            push_checkpoint_to_git(\n",
+    "                    filepaths=[checkpoint_file,\n",
+    "                    f\"plots/iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}_performance_plot.png\",\n",
+    "                    f\"plots/layerwise_remaining_params_plot_weight_rewinding_{str(pruning_params['weight_rewinding'])}.png\"],\n",
+    "                    branch_name=\"felix-v3\",  # Mets le nom de ta branche ici\n",
+    "                    commit_msg=f\"Auto save checkpoints and plots step {step-1}\"\n",
+    "                )\n",
     "\n",
     "        # reset unpruned weights to their initial random values and D = D_sparse\n",
     "        D = PrunedModel(model=copy.deepcopy(initial_untrained_model), mask=new_mask).to(device)\n",
