shut down git hub commit function

--- a/iterative_pruning.ipynb
+++ b/iterative_pruning.ipynb
@@ -385,13 +385,13 @@
     "            path = f'plots/iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}/'\n",
     "            plot_lth_progress(history_theta, history_acc, path)\n",
     "            plot_layerwise_remaining_params(D_sparse, current_mask, path)\n",
-    "            push_checkpoint_to_git(\n",
-    "                    filepaths=[checkpoint_file,\n",
-    "                    f\"plots/iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}_performance_plot.png\",\n",
-    "                    f\"plots/layerwise_remaining_params_plot_weight_rewinding_{str(pruning_params['weight_rewinding'])}.png\"],\n",
-    "                    branch_name=\"felix-v3\",  # Mets le nom de ta branche ici\n",
-    "                    commit_msg=f\"Auto save checkpoints and plots step {step-1}\"\n",
-    "                )\n",
+    "            # push_checkpoint_to_git(\n",
+    "            #         filepaths=[checkpoint_file,\n",
+    "            #         f\"plots/iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}_performance_plot.png\",\n",
+    "            #         f\"plots/layerwise_remaining_params_plot_weight_rewinding_{str(pruning_params['weight_rewinding'])}.png\"],\n",
+    "            #         branch_name=\"felix-v3\",  # Mets le nom de ta branche ici\n",
+    "            #         commit_msg=f\"Auto save checkpoints and plots step {step-1}\"\n",
+    "            #     )\n",
     "\n",
     "        # reset unpruned weights to their initial random values and D = D_sparse\n",
     "        D = PrunedModel(model=copy.deepcopy(initial_untrained_model), mask=new_mask).to(device)\n",
