corrected the readme

--- a/iterative_pruning.ipynb
+++ b/iterative_pruning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "5a973793",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "bc6f555b",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "5a19342f",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "325ed667",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "3267fee4",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "8250091c",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "f893f2eb",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "4e9c9a53",
    "metadata": {},
    "outputs": [
@@ -480,35 +480,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/7676 [00:00<?, ?it/s]"
+      "100%|██████████| 7676/7676 [00:00<00:00, 8109.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dev set...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/7676 [00:00<?, ?it/s]\n"
+      "100%|██████████| 852/852 [00:00<00:00, 7521.09it/s]\n"
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/onyxia/Advanced-ML-Project/data/training2017/A03515.mat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/python/lib/python3.13/site-packages/scipy/io/matlab/_mio.py:39\u001b[39m, in \u001b[36m_open_file\u001b[39m\u001b[34m(file_like, appendmat, mode)\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m39\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_like\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     40\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     41\u001b[39m     \u001b[38;5;66;03m# Probably \"not found\"\u001b[39;00m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '/home/onyxia/Advanced-ML-Project/data/training2017/A03515.mat'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mLoading training set...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m train = \u001b[43mload_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtrain.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m256\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m train_ecgs, train_labels = train\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# reduciton of size to improve training time\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# train_ecgs, train_labels = train_ecgs[:1000], train_labels[:1000]\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/work/Advanced-ML-Project/load_data.py:51\u001b[39m, in \u001b[36mload_dataset\u001b[39m\u001b[34m(data_json, step)\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m d \u001b[38;5;129;01min\u001b[39;00m tqdm.tqdm(data):\n\u001b[32m     47\u001b[39m     \u001b[38;5;66;03m# ecg_file = Path(d['ecg']).name \u001b[39;00m\n\u001b[32m     48\u001b[39m     \u001b[38;5;66;03m# ecg_path = data_dir / ecg_file\u001b[39;00m\n\u001b[32m     49\u001b[39m     \u001b[38;5;66;03m# ecg_path = root / d['ecg']\u001b[39;00m\n\u001b[32m     50\u001b[39m     labels.append(d[\u001b[33m'\u001b[39m\u001b[33mlabels\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m51\u001b[39m     ecgs.append(\u001b[43mload_ecg\u001b[49m\u001b[43m(\u001b[49m\u001b[43md\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mecg\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstep\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     52\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m ecgs, labels\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/work/Advanced-ML-Project/load_data.py:22\u001b[39m, in \u001b[36mload_ecg\u001b[39m\u001b[34m(record, step)\u001b[39m\n\u001b[32m     20\u001b[39m     ecg = np.load(record)\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m os.path.splitext(record)[\u001b[32m1\u001b[39m] == \u001b[33m\"\u001b[39m\u001b[33m.mat\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m     ecg = \u001b[43msio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloadmat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrecord\u001b[49m\u001b[43m)\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mval\u001b[39m\u001b[33m'\u001b[39m].squeeze()\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;66;03m# Assumes binary 16 bit integers\u001b[39;00m\n\u001b[32m     24\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(record, \u001b[33m'\u001b[39m\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fid:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/python/lib/python3.13/site-packages/scipy/io/matlab/_mio.py:233\u001b[39m, in \u001b[36mloadmat\u001b[39m\u001b[34m(file_name, mdict, appendmat, spmatrix, **kwargs)\u001b[39m\n\u001b[32m     88\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     89\u001b[39m \u001b[33;03mLoad MATLAB file.\u001b[39;00m\n\u001b[32m     90\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    230\u001b[39m \u001b[33;03m    3.14159265+3.14159265j])\u001b[39;00m\n\u001b[32m    231\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    232\u001b[39m variable_names = kwargs.pop(\u001b[33m'\u001b[39m\u001b[33mvariable_names\u001b[39m\u001b[33m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m233\u001b[39m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m_open_file_context\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mappendmat\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mas\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[43m    \u001b[49m\u001b[43mMR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mmat_reader_factory\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    235\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmatfile_dict\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mMR\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_variables\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvariable_names\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/python/lib/python3.13/contextlib.py:141\u001b[39m, in \u001b[36m_GeneratorContextManager.__enter__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    139\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[38;5;28mself\u001b[39m.args, \u001b[38;5;28mself\u001b[39m.kwds, \u001b[38;5;28mself\u001b[39m.func\n\u001b[32m    140\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m141\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgen\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[32m    143\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mgenerator didn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt yield\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/python/lib/python3.13/site-packages/scipy/io/matlab/_mio.py:17\u001b[39m, in \u001b[36m_open_file_context\u001b[39m\u001b[34m(file_like, appendmat, mode)\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;129m@contextmanager\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_open_file_context\u001b[39m(file_like, appendmat, mode=\u001b[33m'\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m     f, opened = \u001b[43m_open_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_like\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mappendmat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     19\u001b[39m         \u001b[38;5;28;01myield\u001b[39;00m f\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/python/lib/python3.13/site-packages/scipy/io/matlab/_mio.py:45\u001b[39m, in \u001b[36m_open_file\u001b[39m\u001b[34m(file_like, appendmat, mode)\u001b[39m\n\u001b[32m     43\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m appendmat \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m file_like.endswith(\u001b[33m'\u001b[39m\u001b[33m.mat\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m     44\u001b[39m         file_like += \u001b[33m'\u001b[39m\u001b[33m.mat\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m45\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_like\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     46\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     47\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\n\u001b[32m     48\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mReader needs file name or open file-like object\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     49\u001b[39m     ) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01me\u001b[39;00m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '/home/onyxia/Advanced-ML-Project/data/training2017/A03515.mat'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEAN :  7.4661856  STD :  236.10312\n",
+      "self.classes :  ['A', 'N', 'O', '~']\n",
+      "self.class_to_int :  {'A': 0, 'N': 1, 'O': 2, '~': 3}\n",
+      "MEAN :  8.029898  STD :  242.35907\n",
+      "self.classes :  ['A', 'N', 'O', '~']\n",
+      "self.class_to_int :  {'A': 0, 'N': 1, 'O': 2, '~': 3}\n",
+      "Tri du dataset par longueur pour minimiser le padding...\n",
+      "Tri du dataset par longueur pour minimiser le padding...\n"
      ]
     }
    ],
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "1b72c473",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "6f77e0f7",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "21393819",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "3b9a3fdf",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "434471d4",
    "metadata": {},
    "outputs": [
@@ -877,9 +877,9 @@
       "\n",
       "============================== STEP 0 ==============================\n",
       "remaining_weights_number = 1.05e+07\n",
-      "current reduction factor =  1.0  over 120\n",
-      "pruning percentage =  30  %\n",
-      "pruning fraction =  0.3\n",
+      "current reduction factor =  1.0\n",
+      "current pruning percentage =  0.0  %   over  30  %\n",
+      "pruning fraction =  0.01\n",
       "model sparcity (percentage of weight that has been pruned):  tensor(0.)\n"
      ]
     },
@@ -887,18 +887,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training Epoch [1/20]: 100%|███████████████████████| 240/240 [00:50<00:00,  4.71it/s, curr_train_f1=0.3444, curr_train_loss=1.15268212, lr=0.00100000]\n",
-      "Validation Epoch [1/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 14.42it/s, f1_val=0.3878, val_loss=1.19400441]\n",
-      "Training Epoch [2/20]: 100%|███████████████████████| 240/240 [00:53<00:00,  4.50it/s, curr_train_f1=0.4976, curr_train_loss=0.84971344, lr=0.00100000]\n",
-      "Validation Epoch [2/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 14.18it/s, f1_val=0.5665, val_loss=0.82721945]\n",
-      "Training Epoch [3/20]: 100%|███████████████████████| 240/240 [00:53<00:00,  4.48it/s, curr_train_f1=0.6193, curr_train_loss=0.74308664, lr=0.00100000]\n",
-      "Validation Epoch [3/20]: 100%|████████████████████████████████████████████████████| 27/27 [00:01<00:00, 14.29it/s, f1_val=0.6550, val_loss=0.76247418]\n",
-      "Training Epoch [4/20]:  69%|███████████████▊       | 165/240 [00:36<00:15,  4.75it/s, curr_train_f1=0.6908, curr_train_loss=0.72719438, lr=0.00100000]"
+      "Training Epoch [1/20]:   0%|                                                                                                  | 0/240 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'targets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m final_mask, history_theta, history_f1 = \u001b[43miterative_pruning\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpruning_params\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloss_func\u001b[49m\u001b[43m)\u001b[49m \n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 58\u001b[39m, in \u001b[36miterative_pruning\u001b[39m\u001b[34m(pruning_params, network, train_loader, val_loader, loss_func, resume)\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mmodel sparcity (percentage of weight that has been pruned): \u001b[39m\u001b[33m\"\u001b[39m, current_mask.sparsity )  \n\u001b[32m     57\u001b[39m \u001b[38;5;66;03m# Train the DL network with the given data x.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m D,final_accuracy = \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mD\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloss_func\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mlth_ecg\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprior\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mprior\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mtb_logger\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     60\u001b[39m \u001b[38;5;66;03m# 3. Archivage\u001b[39;00m\n\u001b[32m     61\u001b[39m history_theta.append(initial_weights_number/remaining_weights_number)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 60\u001b[39m, in \u001b[36mtrain_model\u001b[39m\u001b[34m(model, train_loader, val_loader, loss_func, tb_logger, prior, epochs, name)\u001b[39m\n\u001b[32m     56\u001b[39m \u001b[38;5;66;03m# scheduler.step() # Update the learning rate.\u001b[39;00m\n\u001b[32m     58\u001b[39m preds = torch.argmax(logits, dim=\u001b[32m1\u001b[39m)  \u001b[38;5;66;03m# (B, S)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m60\u001b[39m accuracy_metric.update(preds, \u001b[43mtargets\u001b[49m)\n\u001b[32m     62\u001b[39m current_train_accuracy = accuracy_metric.compute.item()\n\u001b[32m     63\u001b[39m training_loss.append(loss.item())\n",
+      "\u001b[31mNameError\u001b[39m: name 'targets' is not defined"
      ]
     }
    ],
    "source": [
-    "final_mask, history_theta, history_f1 = run_lth_ecg(pruning_params, model, train_loader, val_loader, loss_func) "
+    "final_mask, history_theta, history_f1 = iterative_pruning(pruning_params, model, train_loader, val_loader, loss_func) "
    ]
   },
   {
