--- a/plots.ipynb
+++ b/plots.ipynb
@@ -102,6 +102,36 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3867e28d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> Chargement du checkpoint : new_lth_ecg_checkpoint.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkpoint2=load_checkpoint('new_lth_ecg_checkpoint.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "394f4eeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta=np.array(checkpoint2['history_theta']) # Initial number of weights/Current number of weights at each step\n",
+    "f1_score=np.array(checkpoint2['history_f1'])\n",
+    "stops=np.array(checkpoint2['early'])"
+   ]
   }
  ],
  "metadata": {
